# MoxBox

./: .gitignore  CMakeLists.txt  notes.md  readme.md  sdkconfig  sdkconfig.old
frontend/: build.sh  (+3 more)
main/: CMakeLists.txt  Kconfig.projbuild  defines.h  idf_component.yml  main.cpp  realtime_ops.h  version.h  web_server.h
main/ESPNtpClient/: ESPNtpClient.cpp  ESPNtpClient.h  NTPEventTypes.h  TZdef.h
main/PsychicHttp/: ChunkPrinter.h  PsychicCore.h  PsychicEventSource.cpp  PsychicFileResponse.cpp  PsychicHttp.h  PsychicHttpServer.cpp  PsychicHttpsServer.cpp  PsychicJson.cpp  PsychicJson.h  PsychicRequest.cpp  PsychicRequest.h  PsychicResponse.cpp  PsychicStaticFileHander.cpp  PsychicWebSocket.cpp  async_worker.cpp  async_worker.h
main/arduino-core/: Esp.cpp  Esp.h  HEXBuilder.cpp  HEXBuilder.h  HardwareSerial.h  HashBuilder.h  MD5Builder.cpp  MD5Builder.h  MacAddress.cpp  MacAddress.h  SHA1Builder.cpp  SHA1Builder.h  StreamString.cpp  Tone.cpp  Udp.h  chip-debug-report.cpp  esp32-hal-adc.c  esp32-hal-adc.h  esp32-hal-i2c-slave.c  esp32-hal-i2c-slave.h
main/arduino-libs/ArduinoJson/src/: ArduinoJson.hpp
main/arduino-libs/BLE/src/: BLEEddystoneURL.h.orig
main/arduino-libs/BluetoothSerial/src/: BTAddress.h  BTScan.h
main/arduino-libs/DNSServer/src/: DNSServer.cpp  DNSServer.h
main/arduino-libs/EEPROM/src/: EEPROM.h
main/arduino-libs/FS/src/: FS.h
main/arduino-libs/HTTPClient/src/: HTTPClient.cpp  HTTPClient.h
main/arduino-libs/HTTPUpdate/src/: HTTPUpdate.cpp  HTTPUpdate.h
main/arduino-libs/HTTPUpdateServer/src/: HTTPUpdateServer.h
main/arduino-libs/Network/src/: Network.h  NetworkClient.cpp  NetworkClient.h  NetworkServer.h  NetworkUdp.h
main/arduino-libs/NetworkClientSecure/src/: ssl_client.cpp
main/arduino-libs/RainMaker/src/: RMakerType.h
main/arduino-libs/SD_MMC/src/: SD_MMC.h
main/arduino-libs/SPIFFS/src/: SPIFFS-arduino.cpp
main/arduino-libs/Update/src/: Update.h
main/lib/: camera_manager.cpp  camera_manager.h  control_queue.cpp  control_queue.h  data_logger.cpp  data_logger.h  mcu.h  network_utils.cpp  network_utils.h  spiffs_manager.cpp  spiffs_manager.h  ssl_keygen.cpp  ssl_keygen.h  structs.h  task_camburst.h  task_preemptible.h  task_realtime.h
(+142 files in other folders)
